--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.36",
-    "meteor-node-stubs": "^0.3.2"
+    "@types/meteor": "^1.4.13",
+    "meteor-node-stubs": "^0.3.2",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
+  },
+  "devDependencies": {
+    "@types/react": "^16.0.40",
+    "@types/react-dom": "^16.0.4"
   }
 }
