--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,14 @@
     "target": "es5",
     "module": "commonjs",
     "jsx": "react",
-    "strict": true
+    "strict": true,
+    "noImplicitAny": false,
+    "baseUrl": ".",
+    "paths": {
+      "Features/*": ["client/features/*"],
+      "Middleware/*": ["client/middleware/*"],
+      "Lib/*": ["lib/*"],
+      "Client/*": ["client/*"]
+    }
   }
 }
