--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "meteor-redux-reddit",
   "private": true,
   "scripts": {
-    "start": "meteor run"
+    "start": "meteor run",
+    "test": "meteor test --once --driver-package meteortesting:mocha"
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.36",
@@ -22,8 +23,10 @@
     "semantic-ui-react": "^0.79.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.2",
     "@types/faker": "^4.1.2",
     "@types/lodash": "^4.14.106",
+    "@types/mocha": "^5.0.0",
     "@types/react": "^16.0.40",
     "@types/react-dom": "^16.0.4",
     "@types/react-redux": "^5.0.15",
@@ -32,6 +35,10 @@
     "@types/recompose": "^0.24.6",
     "@types/redux": "^3.6.0",
     "@types/reselect": "^2.2.0",
-    "tslint": "^5.9.1"
+    "chai": "^4.1.2",
+    "mocha": "^5.0.5",
+    "ts-mocha": "^1.1.0",
+    "tslint": "^5.9.1",
+    "typescript": "^2.7.2"
   }
 }
