--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/reselect": "^2.2.0",
     "chai": "^4.1.2",
     "mocha": "^5.0.5",
+    "redux-logger": "^3.0.6",
     "ts-mocha": "^1.1.0",
     "tslint": "^5.9.1",
     "typescript": "^2.7.2"
