--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "compilerOptions": {
     "target": "es5",
+    "noUnusedParameters": true,
+    "lib": [
+      "es2015"
+    ],
     "module": "commonjs",
     "jsx": "react",
     "strict": true,
