--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "recompose": "^0.26.0",
     "redux": "^3.7.2",
     "redux-form": "^7.3.0",
+    "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
     "semantic-ui-css": "^2.3.1",
     "semantic-ui-react": "^0.79.0",
