--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "faker": "^4.1.0",
     "lodash": "^4.17.5",
     "meteor-node-stubs": "^0.3.2",
+    "meteor-redux-middlewares": "^3.0.6",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
