--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
     "private": true,
     "scripts": {
         "start": "meteor run",
-        "jest": "jest",
-        "test": "meteor test --once --driver-package meteortesting:mocha"
+        "jest": "jest ./client",
+        "test": "meteor test --once --driver-package meteortesting:mocha",
+        "accept": "ts-mocha tests/acceptance.tests.ts"
     },
     "dependencies": {
         "@babel/runtime": "^7.0.0-beta.36",
@@ -35,6 +36,7 @@
         "@types/jest": "^22.2.2",
         "@types/lodash": "^4.14.106",
         "@types/mocha": "^5.0.0",
+        "@types/puppeteer": "^1.2.0",
         "@types/react": "^16.0.40",
         "@types/react-dom": "^16.0.4",
         "@types/react-redux": "^5.0.15",
@@ -50,6 +52,7 @@
         "jest": "^22.4.3",
         "jest-meteor-stubs": "^1.5.1",
         "mocha": "^5.0.5",
+        "puppeteer": "^1.2.0",
         "redux-logger": "^3.0.6",
         "ts-jest": "^22.4.2",
         "ts-mocha": "^1.1.0",
