--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": [
       "es2015"
     ],
+    "experimentalDecorators": true,
     "sourceMap": true,
     "module": "commonjs",
     "jsx": "react",
