--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,9 @@
     "lib": [
       "es2015"
     ],
+    "types": [
+      "types/types",
+    ],
     "experimentalDecorators": true,
     "sourceMap": true,
     "module": "commonjs",
