--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "recompose": "^0.26.0",
     "redux": "^3.7.2",
     "redux-form": "^7.3.0",
+    "redux-history-transitions": "^2.2.0",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
     "semantic-ui-css": "^2.3.1",
@@ -67,6 +68,7 @@
     "mocha": "^5.0.5",
     "puppeteer": "^1.2.0",
     "redux-logger": "^3.0.6",
+    "redux-mock-store": "^1.5.1",
     "ts-jest": "^22.4.2",
     "ts-mocha": "^1.1.0",
     "tslint": "^5.9.1",
