--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "meteor-redux-reddit",
   "private": true,
   "scripts": {
-    "start": "meteor run",
+    "start": "MONGO_URL=mongodb://cn:Kahlon13@13.91.19.47:27117/test?ssl=true meteor run",
     "jest": "jest ./client --coverage",
     "test": "meteor test --once --driver-package meteortesting:mocha",
     "accept": "ts-mocha tests/acceptance.tests.ts",
@@ -16,6 +16,7 @@
     "lodash": "^4.17.5",
     "meteor-node-stubs": "^0.3.2",
     "meteor-redux-middlewares": "^3.0.6",
+    "meteor-redux-subscriptions": "^1.0.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
@@ -26,8 +27,10 @@
     "redux": "^3.7.2",
     "redux-form": "^7.3.0",
     "redux-history-transitions": "^2.2.0",
+    "redux-observable": "^0.18.0",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
+    "rxjs": "^5.5.8",
     "semantic-ui-css": "^2.3.1",
     "semantic-ui-react": "^0.79.0",
     "simpl-schema": "^1.4.2"
